[Isolated Regions] [Test] Adapt 'test_overwrite_sg' so that it does not use FSxLustre file systems in US isolated regions.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
@@ -34,7 +34,7 @@ SharedStorage:
   - MountDir: efs
     Name: {{ efs_name }}
     StorageType: Efs
-  {% if scheduler != "awsbatch" %}
+  {% if "us-iso" not in region and scheduler != "awsbatch" %}
   - MountDir: fsx
     Name: {{ fsx_name }}
     StorageType: FsxLustre
