--- a/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.yaml
+++ b/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.yaml
@@ -34,7 +34,7 @@ SharedStorage:
   - MountDir: efs
     Name: {{ efs_name }}
     StorageType: Efs
-  {% if scheduler != "awsbatch" %}
+  {% if "us-iso" not in region and scheduler != "awsbatch" %}
   - MountDir: fsx
     Name: {{ fsx_name }}
     StorageType: FsxLustre
