[Isolated Regions] [Test] Adapt 'test_cluster_in_private_subnet'  so that it does not use FSxLustre file systems in US isolated regions.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_private_subnet/pcluster.config.yaml
+++ b/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_private_subnet/pcluster.config.yaml
@@ -28,12 +28,17 @@ Scheduling:
         SubnetIds:
           - {{ private_subnet_id }}
 SharedStorage:
-  - MountDir: {{ fsx_mount_dir }}
-    Name: privatefsx
+  - MountDir: {{ mount_dir }}
+    Name: privatestorage
+    {% if storage_type == "EFS" %}
+    StorageType: Efs
+    {% endif %}
+    {% if storage_type == "FSX" %}
     StorageType: FsxLustre
     FsxLustreSettings:
       StorageCapacity: 1200
       DeploymentType: SCRATCH_2
+    {% endif %}
 DeploymentSettings:
   LambdaFunctionsVpcConfig:
     SecurityGroupIds:
