[Integ-tests] Fix isolated_regions.yaml to use the right instance type
c5n.9xlarge is the same instance type as used in common.yaml

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/configs/isolated_regions.yaml
+++ b/tests/integration-tests/configs/isolated_regions.yaml
@@ -75,7 +75,7 @@ test-suites:
     test_pcluster_configure.py::test_efa_and_placement_group:
       dimensions:
         - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
+          instances: ["c5n.9xlarge"]
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
     test_pcluster_configure.py::test_efa_unsupported:
