[Integ-tests] Change c5a to c5n in test_update_slurm
c5n is available in isolated regions while c5a is not

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.yaml
@@ -47,7 +47,7 @@ Scheduling:
         - Name: queue1-i1
           Instances:
             - InstanceType: c5.xlarge
-            - InstanceType: c5a.xlarge
+            - InstanceType: c5n.xlarge
             - InstanceType: c5d.xlarge
           MinCount: 2 # Increased parameter value
           MaxCount: 4 # Increased parameter value
