[Integ-tests] Fix isolated_regions.yaml to use the right instance type for head node stop.
This test requires instance types with instance store

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/configs/isolated_regions.yaml
+++ b/tests/integration-tests/configs/isolated_regions.yaml
@@ -488,7 +488,7 @@ test-suites:
     test_ephemeral.py::test_head_node_stop:
       dimensions:
         - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
+          instances: ["m5d.xlarge", "h1.2xlarge"]
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
   tags:
