Select the AZ for the test with h1.2xlarge
Signed-off-by: Francesco Giordano <giordafr@amazon.it>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -746,7 +746,7 @@ storage:
   # Ephemeral test requires instance type with instance store
   test_ephemeral.py::test_head_node_stop:
     dimensions:
-      - regions: ["us-east-1"]
+      - regions: ["use1-az4"]
         instances: ["m5d.xlarge", "h1.2xlarge"]
         oss: ["alinux2"]
         schedulers: ["slurm"]
