--- a/tests/integration-tests/configs/custom_resource.yaml
+++ b/tests/integration-tests/configs/custom_resource.yaml
@@ -26,3 +26,7 @@ test-suites:
       dimensions:
         - oss: ["alinux2"]
           regions: ["us-east-2"]
+    test_cluster_custom_resource.py::test_cluster_create_with_custom_policies:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
